#--------------------------------------------------------------------------
# ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V01-00-64
2018-12-11 Mikhail S. Dubrovin
- add epix10ka in mask_geo, status_as_mask and mask_geo, UtilsEpix10kaCalib.deploy_constants add deployment for gainci
modified:   app/epix10ka_deploy_constants
	    examples/ex_epix10ka_images.py
	    src/AreaDetector.py
	    src/PyDataAccess.py
	    src/PyDetectorAccess.py
	    src/UtilsEpix10kaCalib.py

Tag: V01-00-63
2018-12-06 Mikhail S. Dubrovin
- old version of the fit is restored, in epix10ka_pedestals_calibration add parameters ccnum for calybcycle selection
 	modified:   app/epix10ka_deploy_constants
 	modified:   app/epix10ka_offset_calibration
 	modified:   app/epix10ka_pedestals_calibration
 	modified:   src/UtilsEpix10kaCalib.py

Committed w/o tag
2018-12-04 Mikhail S. Dubrovin
- Gabriel fixes fit
	modified:   src/UtilsEpix10kaCalib.py

Tag: V01-00-62
2018-12-04 Mikhail S. Dubrovin
- apply gated algorithm to pedestals, add rms and status, save charge injected gains per panel
 	modified:   src/UtilsEpix10kaCalib.py
 	modified:   app/epix10ka_deploy_constants
 	modified:   app/epix10ka_pedestals_calibration
 	modified:   examples/ex_rayonix_config_pars.py

Committed w/o tag
2018-11-30 Mikhail S. Dubrovin
- src/UtilsEpix10kaCalib.py fix nrec -= 1 at the end of two cycles, invert GAIN_FACTOR_DEF

Tag: V01-00-61
2018-11-30 Mikhail S. Dubrovin
- fix multiple issues for intensity calibration of epix10ka2m
  - fix log on start record crash for missing SIT_RELEASE
  - in epix10ka_deploy_constants extend -t parameter for run number
  - use default gain factors 1/3/100 H/M/L gain modes, respectively
  - cosmetic improvements of output in debug mode
	modified:   app/epix10ka_deploy_constants