@@ -7,6 +7,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V01-00-65
+2018-12-12 Mikhail S. Dubrovin
+- UtilsEpix10kaCalib - fix issue with os.chmod for existing file created by other user
+
 Tag: V01-00-64
 2018-12-11 Mikhail S. Dubrovin
 - add epix10ka in mask_geo, status_as_mask and mask_geo, UtilsEpix10kaCalib.deploy_constants add deployment for gainci
